change :sort imgs

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <ul class="project__list">
           <li class="project__item">
             <img
-              src="wp_email_restriction_logo.png"
+              src="/images/wp_email_restriction_logo.png"
               alt="email restriction plugin for wordpress"
               class="project__item_img"
               id="project__item_img_plugin"
@@ -167,7 +167,7 @@
             </div>
 
             <img
-              src="univ-website.png"
+              src="/images/univ-website.png"
               alt="email restriction plugin for wordpress"
               class="project__item_img"
               id="project__item_img_website"
