--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
       </section>
     </div>
     <script src="scripts/animation.js"></script>
+    <script src="scripts/index.js"></script>
     <footer class="footer">&copy; 2025 By Rezouali Raouf</footer>
   </body>
 </html>
