--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <nav class="header-nav">
           <ul class="header-nav-list">
             <a href="#bio" class="header-nav-link nav__bio">bio</a>
-            <a href="#skills" class="header-nav-link nav__skills">skills</a>
             <a href="#projects" class="header-nav-link nav__projects"
               >projects</a
             >
+            <a href="#skills" class="header-nav-link nav__skills">skills</a>
             <a href="#clients" class="header-nav-link nav__clients"
               >my clients</a
             >
@@ -83,36 +83,7 @@
           alt="profile-pic"
         />
       </section>
-      <section class="section-base section-with-bg skills" id="skills">
-        <h2 class="section__heading bg">Skills</h2>
-        <ul class="skills__list">
-          <li class="skills__item">
-            <h3 class="skills__item_heading">C</h3>
-            <p class="skills__item_paragraph">3 Years</p>
-          </li>
-          <li class="skills__item">
-            <h3 class="skills__item_heading">Python</h3>
-            <p class="skills__item_paragraph">2 Years</p>
-          </li>
-          <li class="skills__item">
-            <h3 class="skills__item_heading">Wordpress</h3>
-            <p class="skills__item_paragraph">1 Year</p>
-          </li>
-          <li class="skills__item">
-            <h3 class="skills__item_heading">Command Line</h3>
-            <p class="skills__item_paragraph">3 years</p>
-          </li>
-          <li class="skills__item">
-            <h3 class="skills__item_heading">HTML/CSS</h3>
-            <p class="skills__item_paragraph">2 Years</p>
-          </li>
-          <li class="skills__item">
-            <h3 class="skills__item_heading">Git/GitHub</h3>
-            <p class="skills__item_paragraph">3 years</p>
-          </li>
-        </ul>
-      </section>
-      <section class="project section-base" id="projects">
+      <section class="project section-base section-with-bg" id="projects">
         <h2 class="section__heading skills__heading">My Featured Projects</h2>
         <ul class="project__list">
           <li class="project__item">
@@ -166,6 +137,35 @@
             />
           </li>
         </ul>
+        <section class="section-base skills" id="skills">
+          <h2 class="section__heading bg">Skills</h2>
+          <ul class="skills__list">
+            <li class="skills__item">
+              <h3 class="skills__item_heading">C</h3>
+              <p class="skills__item_paragraph">3 Years</p>
+            </li>
+            <li class="skills__item">
+              <h3 class="skills__item_heading">Python</h3>
+              <p class="skills__item_paragraph">2 Years</p>
+            </li>
+            <li class="skills__item">
+              <h3 class="skills__item_heading">Wordpress</h3>
+              <p class="skills__item_paragraph">1 Year</p>
+            </li>
+            <li class="skills__item">
+              <h3 class="skills__item_heading">Command Line</h3>
+              <p class="skills__item_paragraph">3 years</p>
+            </li>
+            <li class="skills__item">
+              <h3 class="skills__item_heading">HTML/CSS</h3>
+              <p class="skills__item_paragraph">2 Years</p>
+            </li>
+            <li class="skills__item">
+              <h3 class="skills__item_heading">Git/GitHub</h3>
+              <p class="skills__item_paragraph">3 years</p>
+            </li>
+          </ul>
+        </section>
       </section>
       <section class="clients section-base section-with-bg" id="clients">
         <h2 class="section__heading">
