changed projects section style to cards

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           alt="profile-pic"
         />
       </section>
-      <section class="project section-base section-with-bg" id="projects">
+      <section class="project section-base" id="projects">
         <h2 class="section__heading skills__heading">My Featured Projects</h2>
         <ul class="project__list">
           <li class="project__item">
@@ -94,16 +94,11 @@
               id="project__item_img_plugin"
             />
             <div class="project__description">
-              <h3 class="project__item_heading">
-                Email Restriction <br />Plugin
-              </h3>
+              <h3 class="project__item_heading">WP plugin</h3>
               <p class="project__item_description">
                 WP Email Restriction - A WordPress security plugin that
                 restricts site access to users with approved email domains.
-                Perfect for corporate <br />
-                intranets and private communities requiring controlled access.
-                Features easy domain whitelisting and seamless WordPress
-                integration.
+                Perfect for corporate intranets and private communities.
               </p>
               <a
                 class="project__item_link"
@@ -118,8 +113,8 @@
               <h3 class="project__item_heading">Library website</h3>
               <p class="project__item_description">
                 A specialized WordPress website for the University of Bouira's
-                Faculty library. Features a rich digital <br />collection of
-                Arabic and foreign language resources for academic research.
+                Faculty library. Features a rich digital collection of Arabic
+                and foreign language resources for academic research.
               </p>
               <a
                 class="project__item_link"
