edit : theme colors and section height and responsiveness

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <label for="checkbox-id" class="theme-btn-lable"></label>
         </div>
       </div>
-      <section class="section-base bio" id="bio">
+      <section class="section-base bio section-with-bg" id="bio">
         <h1 class="bio__heading">hi There I'm Raouf Rezouali</h1>
         <div class="bio__description">
           <div class="bio__descrepition_container">
@@ -83,7 +83,7 @@
       <section class="project section-base" id="projects">
         <h2 class="section__heading skills__heading">My Featured Projects</h2>
         <ul class="project__list">
-          <li class="project__item">
+          <li class="project__item" id="plugin-project">
             <img
               src="/images/wp_email_restriction_logo.png"
               alt="email restriction plugin for wordpress"
@@ -130,7 +130,7 @@
           </li>
         </ul>
       </section>
-      <section class="section-base skills" id="skills">
+      <section class="section-base section-with-bg skills" id="skills">
         <h2 class="section__heading bg">Skills</h2>
         <ul class="skills__list">
           <li class="skills__item">
