edit : theme colors for contact and bio sections

--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
           </div>
           <div class="bio__cv">
             <a class="bio__paragraph" href="#contact">say hi!</a>
-            <a class="bio__btn" href="/assets/mohamedAbusreaResume.pdf"
-              >download cv</a
-            >
+            <a class="bio__btn" href="/#">download cv</a>
           </div>
         </div>
         <img
