add : back to top btn and add email input

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <section class="section-base bio section-with-bg" id="bio">
-        <h1 class="bio__heading">hi There I'm Raouf Rezouali</h1>
+        <h1 class="bio__heading">Hi There I'm Raouf Rezouali</h1>
         <div class="bio__description">
           <div class="bio__descrepition_container">
             <h3 class="bio__description_text"></h3>
@@ -211,10 +211,10 @@
               />
               <input
                 class="contact__input"
-                type="tel"
-                placeholder="* Phone No."
+                type="email"
+                placeholder="* @ email"
                 id="form__ph_input"
-                name="ph_number"
+                name="user_email"
                 required
               />
               <textarea
@@ -230,6 +230,7 @@
           </div>
         </div>
       </section>
+      <div class="back_to_top">&#129033;</div>
     </div>
     <script src="scripts/animation.js"></script>
     <script src="scripts/index.js"></script>
