--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </div>
         </div>
       </section>
-      <div class="back_to_top">🠉</div>
+      <div class="back_to_top"></div>
     </div>
     <script src="scripts/animation.js"></script>
     <script src="scripts/index.js"></script>
