edit phone input to email

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <input
                 class="contact__input"
                 type="email"
-                placeholder="* @ email"
+                placeholder="* Email"
                 id="form__ph_input"
                 name="user_email"
                 required
