--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/emailjs-com/3.2.0/email.min.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <title>raouf rezouali</title>
   </head>
@@ -200,31 +201,7 @@
               Let's Work <br />
               Together!
             </h2>
-            <form
-              action="https://formsubmit.co/el/yegadu"
-              method="POST"
-              class="contact__item_form"
-              id="contactForm"
-            >
-              <!-- FormSubmit Configuration -->
-              <input
-                type="hidden"
-                name="_subject"
-                value="New Contact Form Submission from Portfolio"
-              />
-              <input type="hidden" name="_captcha" value="true" />
-              <input type="hidden" name="_template" value="table" />
-
-              <!-- Honeypot field for spam protection -->
-              <input
-                type="text"
-                name="_honey"
-                class="hidden-field"
-                tabindex="-1"
-                autocomplete="off"
-              />
-
-              <!-- Form fields -->
+            <form id="contactForm" class="contact__item_form">
               <input
                 class="contact__input"
                 type="text"
@@ -270,6 +247,7 @@
     </div>
     <script src="scripts/animation.js"></script>
     <script src="scripts/index.js"></script>
+    <script src="scripts/contactForm.js"></script>
     <footer class="footer">&copy; 2025 By Rezouali Raouf</footer>
   </body>
 </html>
