rm : themnail me pic add : hero svg

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <img
           class="bio__img"
-          src="images/me_pic-removebg-preview.png"
+          src="images/undraw_mind-map_i9bv.svg"
           alt="profile-pic"
         />
       </section>
