edit : bio skills style section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <h2 class="section__heading bg">Skills</h2>
         <ul class="skills__list">
           <li class="skills__item">
-            <h3 class="skills__item_heading">C</h3>
+            <h3 class="skills__item_heading">C / Problem Solving</h3>
             <p class="skills__item_paragraph">3 Years</p>
           </li>
           <li class="skills__item">
@@ -148,7 +148,7 @@
             <p class="skills__item_paragraph">3 years</p>
           </li>
           <li class="skills__item">
-            <h3 class="skills__item_heading">HTML/CSS</h3>
+            <h3 class="skills__item_heading">HTML/CSS/JS</h3>
             <p class="skills__item_paragraph">2 Years</p>
           </li>
           <li class="skills__item">
